--- a/.github/workflows/youtube_cards.yml
+++ b/.github/workflows/youtube_cards.yml
@@ -12,4 +12,4 @@ jobs:
       - uses: DenverCoder1/github-readme-youtube-cards@main
         with:
           channel_id: UCW5cUU7YYs1EFIIzcImqBPA
-          show_duration: true
+          show_duration: false
